--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -10,3 +7,25 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Vim
+*~
+
+# Gradle
+.gradle/
+/build/
+!/gradle/**/*
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# IDEA
+*.iml
+*.ipr
+*.iws
+/out/
+
+# General test run stuff
+/run/
