--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     shade "io.prometheus:simpleclient_hotspot:${prometheus_ver}"
     shade "io.prometheus:simpleclient_servlet:${prometheus_ver}"
     shade "org.eclipse.jetty:jetty-server:${jetty_ver}"
+    shade "org.eclipse.jetty:jetty-servlet:${jetty_ver}"
 }
 
 // Setup Forge plugin
