--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ minecraft {
     version = mc_ver + "-" + forge_ver
     runDir = 'run'
     replace '@VERSION@', mod_version
+    srgExtra 'PK: org/eclipse/jetty io/drakon/icarus/repack/jetty'
+    srgExtra 'PK: javax/servlet io/drakon/icarus/repack/servlet'
 }
 
 //================================================
@@ -118,6 +120,10 @@ jar {
             exclude 'META-INF', 'META-INF/**'
         }
     }
+
+    // Scrub junk from shaded packages
+    exclude '*.css'
+    exclude '*.html'
 
     // Merge Jenkins and Git manifests to form final manifest in final release jar
     manifest {
